@@ -2,8 +2,11 @@ package test;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.util.ResourceUtils;
 
 import studentDB.entity.RegistrationData;
@@ -12,16 +15,17 @@ import studentDB.entity.Student;
 public class util {
 	
 	public static String readHtml(String path) {
-		File file;
+		
 		String content = "";
+		
 		try {
-			file = ResourceUtils.getFile(path);
-			content = new String(Files.readAllBytes(file.toPath()));
-		} catch (IOException e) {
-			e.printStackTrace();
+			InputStream resource = new ClassPathResource(path).getInputStream();
+			content = new String(resource.readAllBytes(), StandardCharsets.UTF_8);
+		} catch (IOException e1) {
+			e1.printStackTrace();
 		}
 		
-        return content;
+		return content;
 	}
 	
 	public static boolean checkEquals(Student student, RegistrationData data) {
